some edit on prettier and eslint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,10 @@
 "editor.defaultFormatter": "esbenp.prettier-vscode",
 "editor.formatOnSave": true,
 "[javascript]": {
-    "editor.formatOnSave": false
+    "editor.formatOnSave": true
 },
 "[javascriptreact]": {
-    "editor.formatOnSave": false
+    "editor.formatOnSave": true
 },
 "editor.codeActionsOnSave": {
     "source.fixAll": true
